option py_generic_services = true;

message ClientToSeqRequest {
    required bytes data_id = 1;
    required int32 flash_unit_number = 2;
}

message ClientToSeqResponse {
}

service ClientToSeqService {
    rpc Write(ClientToSeqRequest) returns(ClientToSeqResponse);
}
